# demoQt

./: .gitignore  CMakeLists.txt  README.md  configuration_base.hpp  configure.hpp  login.cpp  login.ui  main.cpp
forms/admin/: adminsignup.cpp  adminsignup.hpp  adminsignup.ui
forms/login/: login.cpp  login.h  login.ui
forms/signup/: signup.cpp  signup.hpp  signup.ui
lib/exceptions/: sqlException.hpp
lib/jsonUtils/: jsonWriter.cpp  jsonWriter.hpp
lib/notifications/: notification.hpp
lib/readWrite/: jsonRW.cpp  jsonRW.hpp
lib/sqlConnections/: adminConnection.cpp  adminConnection.hpp  crmConnection.cpp  crmConnection.hpp  erpConnection.cpp  erpConnection.hpp  sqlConnection.cpp  sqlConnection.hpp
lib/styling/: effects.cpp  effects.hpp  style.qss
lib/user/credentials/: credentials.hpp
lib/user/employee/: employee.cpp  employee.hpp
lib/utils/: utils.cpp  utils.hpp
sql/: setup.sql
sql/admin/: adminTableSetup.sql
sql/crm/: crmTableSetup.sql
sql/erp/: erpTableSetup.sql
tests/sqlTests/adminTests/: adminCtor.cpp
tests/sqlTests/crmTests/: crmCtor.cpp  crmFullInfo.cpp  crmUser.cpp
tests/sqlTests/erpTests/: erpCtor.cpp
